# aidc-codec

./: .gitignore  AGENTS.md  Cargo.toml  README.md  gs1-7.txt  mise.toml
.github/workflows/: ci.yml
crates/aidc-contract-tests/: Cargo.toml
crates/aidc-contract-tests/tests/: api_stability.rs  gs1_roundtrip.proptest-regressions  gs1_roundtrip.rs
crates/aidc-core/: Cargo.toml
crates/aidc-core/src/: lib.rs
crates/aidc-core/tests/: gs1_flow.rs
crates/aidc-gs1/: Cargo.toml  README.md  build.rs
crates/aidc-gs1/data/: gs1-syntax-dictionary.lock.json
crates/aidc-gs1/proptest-regressions/parser/: gs1.txt
crates/aidc-gs1/src/: ai.rs  check.rs  conformance.rs  encode.rs  identify.rs  lib.rs  model.rs  normalize.rs  variable_measure.rs  wire.rs
crates/aidc-gs1/src/parser/: gs1.rs  mod.rs
crates/aidc-gs1/tests/: differential_ref.rs  reference_vectors.rs
crates/aidc-gs1/tests/fixtures/: EXTRACTION_REPORT.json  SOURCES.md  ai_parse.jsonl  clause_scandata_process.jsonl  dl_parse.jsonl  extract_reference_fixtures.py  scandata_process.jsonl
