[package]
name = "aidc-gs1"
version = "0.1.0"
edition = "2021"

[features]
default = []
gs1-core = []
gs1-dl = ["gs1-core"]
gs1-composite = ["gs1-core"]

[dependencies]
aidc-core = { path = "../aidc-core" }
phf = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
proptest = { workspace = true }
libloading = "0.8"
